lesson48/global-log-platform/k8s/istio/peerauthentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: log-processing-mtls
  namespace: log-processing
spec:
  mtls:
    mode: STRICT
