lesson48/global-log-platform/k8s/istio/serviceentry-crosscluster.yaml
# Register eu-west log-ingestion as a known external service
# Replace ADDRESS with the actual LoadBalancer IP of eu-west's ingress
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: log-ingestion-eu-west
  namespace: log-processing
spec:
  hosts:
    - log-ingestion.eu-west.svc.cluster.local
  location: MESH_EXTERNAL
  ports:
    - number: 8000
      name: http
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: "REPLACE_WITH_EU_WEST_INGRESS_IP"
      ports:
        http: 8000
      locality: "eu-west/eu-west-1/eu-west-1a"
      labels:
        version: v1
